--- a/Media.html
+++ b/Media.html
@@ -1,20 +1,23 @@
 <!DOCTYPE HTML>
 <html lang="english">
-	<head>
-    <LINK REL="ICON" HREF="MIR.jpg"</LINK>
+<head>
+	<LINK REL="ICON" HREF="MIR.jpg"</LINK>
 		<title>Home Page</title>
 		<meta name="author" content="Mir Raonaq">
 		<meta name="application" content="Atom">
 		<link rel="stylesheet" href="index.css" type="text/css">
-</head>
-<ul>
-  <li><a href="index.html">Home</a></li>
-	<li><a href="Resume.pdf">Resume</a></li>
-	<li><a href="Media.html">Social Media</a></li>
-</ul>
-<div id="socialmedia">
-  <a href="https://www.linkedin.com/in/mirraonaq"><img src="linkedin.jpg" alt="LinkedIn" width="200" height="150"></a> <br>
-  <a href="https://www.facebook.com/MirRaonaq"><img src="facebook.jpg" alt="Facebook" width="200" height="150"></a><br>
-  <a href="https://www.instagram.com/mir_raonaq"><img src="instagram.jpg" alt="Instagram" width="200" height="150"></a>
+	</head>
+	<body>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="Resume.pdf">Resume</a></li>
+			<li><a href="Media.html">Social Media</a></li>
+		</ul>
+		<div id="socialmedia">
+			<a href="https://www.linkedin.com/in/mirraonaq"><img src="linkedin.jpg" alt="LinkedIn" width="200" height="150"></a> <br>
+			<a href="https://www.facebook.com/MirRaonaq"><img src="facebook.jpg" alt="Facebook" width="200" height="150"></a><br>
+			<a href="https://www.instagram.com/mir_raonaq"><img src="instagram.jpg" alt="Instagram" width="200" height="150"></a>
 
-			</div>
+		</div>
+	</body>
+	</html>
