--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<ul>
 		<li><a href="index.html">Home</a></li>
-		<li><a href="Resume">Resume</a></li>
+		<li><a href="Resume.pdf">Resume</a></li>
 		<li><a href="Media.html">Social Media</a></li>
 	</ul>
 </body>
