--- a/Media.html
+++ b/Media.html
@@ -1,23 +1,107 @@
-<!DOCTYPE HTML>
-<html lang="english">
+<!DOCTYPE html>
+<html>
 <head>
-	<LINK REL="ICON" HREF="MIR.jpg"</LINK>
-		<title>Home Page</title>
-		<meta name="author" content="Mir Raonaq">
-		<meta name="application" content="Atom">
-		<link rel="stylesheet" href="index.css" type="text/css">
-	</head>
-	<body>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="Resume.pdf">Resume</a></li>
-			<li><a href="Media.html">Social Media</a></li>
-		</ul>
-		<div id="socialmedia">
-			<a href="https://www.linkedin.com/in/mirraonaq"><img src="linkedin.jpg" alt="LinkedIn" width="200" height="150"></a> <br>
-			<a href="https://www.facebook.com/MirRaonaq"><img src="facebook.jpg" alt="Facebook" width="200" height="150"></a><br>
-			<a href="https://www.instagram.com/mir_raonaq"><img src="instagram.jpg" alt="Instagram" width="200" height="150"></a>
+	<link rel="ICON" href="MIR.jpg"</link>
+  <title>Mir Raonaq | Contact </title>
+	<meta name="author" content="Mir Raonaq">
+	<meta name="application" content="Atom">
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="index.css" type="text/css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-		</div>
-	</body>
-	</html>
+
+
+</head>
+<ul>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="Resume.pdf">Resume</a></li>
+	<li><a href="Media.html">Social Media</a></li>
+</ul>
+</body>
+<body>
+
+
+  <script>
+  jQuery('body').css('display','none');
+  jQuery(document).ready(function() {
+    jQuery('body').fadeIn();
+    jQuery('a').on('click',function(event){
+      var thetarget = this.getAttribute('target')
+      if (thetarget != "_blank"){
+        var thehref = this.getAttribute('href')
+        event.preventDefault();
+        jQuery('body').fadeOut(function(){
+          //alert(thehref)
+          window.location = thehref
+        });
+      }
+    });
+  });
+  setTimeout(function(){
+    jQuery('body').fadeIn();
+  },1000)
+  </script>
+
+  <script type="text/javascript">
+  window.addEventListener('keydown', function (event) {
+    if (event.keyCode === 123 || event.keyCode === 17 || event.keyCode === 85 || event.keyCode === 73 || event.keyCode === 16 || event.keyCode === 67) {
+
+      event.preventDefault();
+
+      return false;
+    }
+
+
+  });
+  </script>
+
+    <br>
+    <br>
+    <br>
+
+    <div class="row " style="text-align: center;">
+      <div class="col-md-12" >
+        <h1>Let's Get In Touch!</h1>
+      </div>
+
+
+
+    </div>
+
+    <hr>
+
+    <div class ="row" style="align-item: center;">
+      <div class ="col-md-3">
+        <a href="https://www.linkedin.com/in/mirraonaq/"><i class="fa fa-linkedin fa-fw fa-3x" aria-hidden="true"></i></a>
+
+      </div>
+
+      <div class="col-md-3">
+        <a href="https://github.com/MirRaonaq"><i class="fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
+
+      </div>
+
+      <div class="col-md-3">
+        <a href="https://www.facebook.com/MirRaonaq"><i class="fa fa-facebook fa-fw fa-3x" aria-hidden="true"></i></a>
+
+      </div>
+
+      <div class="col-md-3" style="align-text: center;">
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=mirraona@buffalo.edu&su=Contact"><i class="fa fa-envelope-o fa-fw fa-3x" aria-hidden="true"></i></a>
+
+
+
+      </div>
+
+
+
+    </div>
+    <br>
+
+<script src="https://use.fontawesome.com/8ec277403e.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+</body>
+</html>
