--- a/index.html
+++ b/index.html
@@ -1,28 +1,82 @@
-<!DOCTYPE HTML>
-<html lang="english">
+
+<!DOCTYPE html>
+<html>
 <head>
-	<LINK REL="ICON" HREF="MIR.jpg"</LINK>
-		<title>Home Page</title>
-		<meta name="author" content="Mir Raonaq">
-		<meta name="application" content="Atom">
-		<link rel="stylesheet" href="index.css" type="text/css">
-	</head>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="Resume.pdf">Resume</a></li>
-		<li><a href="Media.html">Social Media</a></li>
-	</ul>
+	<link rel="ICON" href="MIR.jpg"</link>
+  <title>Mir Raonaq | Home Page</title>
+	<meta name="author" content="Mir Raonaq">
+	<meta name="application" content="Atom">
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="index.css" type="text/css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+
+
+</head>
+<ul>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="Resume.pdf">Resume</a></li>
+	<li><a href="Media.html">Social Media</a></li>
+</ul>
 </body>
-<h1> Mir Raonaq </h1>
-<hr>
+<body>
+	<h1> Mir Raonaq </h1>
+	<hr>
 
-<img src="Picture.jpg" height="200" width="200"
-alt="There is supposed to be an image here."/>
-<p> Computer Science student at University at Buffalo seeking to obtain professional experience with an engineering establishment to apply problem solving skills and creativity to help generate innovative ideas. </p>
-
-<div id="footer">
+	<img src="Picture.PNG" height="500" width="300"
+	alt="There is supposed to be an image here."/>
 	<br>
-	<h2>&copy; Mir Raonaq &middot; Made with Atom &middot; Last modified on April 17, 2017</h2>
-</div>
+	<p> Computer Science student at University at Buffalo seeking to obtain professional experience with an engineering establishment to apply problem solving skills and creativity to help generate innovative ideas. </p>
+
+	<div id="footer">
+		<br>
+		<h2>&copy; Mir Raonaq &middot; Made with Atom &middot; Last modified on April 17, 2017</h2>
+	</div>
+
+  <script>
+  jQuery('body').css('display','none');
+  jQuery(document).ready(function() {
+    jQuery('body').fadeIn();
+    jQuery('a').on('click',function(event){
+      var thetarget = this.getAttribute('target')
+      if (thetarget != "_blank"){
+        var thehref = this.getAttribute('href')
+        event.preventDefault();
+        jQuery('body').fadeOut(function(){
+          //alert(thehref)
+          window.location = thehref
+        });
+      }
+    });
+  });
+  setTimeout(function(){
+    jQuery('body').fadeIn();
+  },1000)
+  </script>
+
+  <script type="text/javascript">
+  window.addEventListener('keydown', function (event) {
+    if (event.keyCode === 123 || event.keyCode === 17 || event.keyCode === 85 || event.keyCode === 73 || event.keyCode === 16 || event.keyCode === 67) {
+
+      event.preventDefault();
+
+      return false;
+    }
+
+
+  });
+  </script>
+
+    <br>
+    <br>
+    <br>
+
+
+
+<script src="https://use.fontawesome.com/8ec277403e.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
