--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,7 +17,7 @@
 <ul>
 	<li><a href="index.html">Home</a></li>
 	<li><a href="Resume.pdf">Resume</a></li>
-	<li><a href="Media.html">Social Media</a></li>
+	<li><a href="media.html">Social Media</a></li>
 </ul>
 </body>
 <body>
