--- a/Media.html
+++ b/Media.html
@@ -6,10 +6,10 @@
 	<meta name="author" content="Mir Raonaq">
 	<meta name="application" content="Atom">
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<link href='http://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="index.css" type="text/css">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 
 
@@ -74,22 +74,22 @@
 
 	<div class ="row" style="align-item: center;">
 		<div class ="col-md-3">
-			<a href="http://www.linkedin.com/in/mirraonaq/"><i class="fa fa-linkedin fa-fw fa-3x" aria-hidden="true"></i></a>
+			<a href="https://www.linkedin.com/in/mirraonaq/"><i class="fa fa-linkedin fa-fw fa-3x" aria-hidden="true"></i></a>
 
 		</div>
 
 		<div class="col-md-3">
-			<a href="http://github.com/MirRaonaq"><i class="fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
+			<a href="https://github.com/MirRaonaq"><i class="fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
 
 		</div>
 
 		<div class="col-md-3">
-			<a href="http://www.facebook.com/MirRaonaq"><i class="fa fa-facebook fa-fw fa-3x" aria-hidden="true"></i></a>
+			<a href="https://www.facebook.com/MirRaonaq"><i class="fa fa-facebook fa-fw fa-3x" aria-hidden="true"></i></a>
 
 		</div>
 
 		<div class="col-md-3" style="align-text: center;">
-			<a href="http://mail.google.com/mail/?view=cm&fs=1&to=mirraona@buffalo.edu&su=Contact"><i class="fa fa-envelope-o fa-fw fa-3x" aria-hidden="true"></i></a>
+			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=mirraona@buffalo.edu&su=Contact"><i class="fa fa-envelope-o fa-fw fa-3x" aria-hidden="true"></i></a>
 
 
 
@@ -100,8 +100,8 @@
 	</div>
 	<br>
 
-	<script src="http://use.fontawesome.com/8ec277403e.js"></script>
-	<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+	<script src="https://use.fontawesome.com/8ec277403e.js"></script>
+	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
