--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <ul>
 	<li><a href="index.html">Home</a></li>
 	<li><a href="Resume.pdf">Resume</a></li>
-	<li><a href="media.html">Social Media</a></li>
+	<li><a href="https://mirraonaq.github.io/media.html">Social Media</a></li>
 </ul>
 </body>
 <body>
