--- a/Media.html
+++ b/Media.html
@@ -12,12 +12,11 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 
-
 </head>
 <ul>
 	<li><a href="index.html">Home</a></li>
 	<li><a href="Resume.pdf">Resume</a></li>
-	<li><a href="https://mirraonaq.github.io/media.html">Social Media</a></li>
+	<li><a href="media.html">Social Media</a></li>
 </ul>
 </body>
 <body>
