--- a/Media.html
+++ b/Media.html
@@ -16,7 +16,7 @@
 <ul>
 	<li><a href="index.html">Home</a></li>
 	<li><a href="Resume.pdf">Resume</a></li>
-	<li><a href="media.html">Social Media</a></li>
+	<li><a href="Media.html">Social Media</a></li>
 </ul>
 </body>
 <body>
