--- a/Media.html
+++ b/Media.html
@@ -72,29 +72,30 @@
 	<hr>
 
 	<div class ="row" style="align-item: center;">
-		<div class ="col-md-3">
+
+		<div class ="col-md-2">
 			<a href="https://www.linkedin.com/in/mirraonaq/"><i class="fa fa-linkedin fa-fw fa-3x" aria-hidden="true"></i></a>
 
 		</div>
 
-		<div class="col-md-3">
+		<div class="col-md-2">
 			<a href="https://github.com/MirRaonaq"><i class="fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
 
 		</div>
 
-		<div class="col-md-3">
+		<div class="col-md-2" style="align-text: center;">
+			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=mirraona@buffalo.edu&su=Contact"><i class="fa fa-envelope-o fa-fw fa-3x" aria-hidden="true"></i></a>
+
+		</div>
+
+		<div class="col-md-2" style="align-text: center;">
+			<a href="https://www.instagram.com/mir_raonaq/"><i class="fa fa-instagram fa-fw fa-3x" aria-hidden="true"></i></a>
+
+		</div>
+		<div class="col-md-2">
 			<a href="https://www.facebook.com/MirRaonaq"><i class="fa fa-facebook fa-fw fa-3x" aria-hidden="true"></i></a>
 
 		</div>
-
-		<div class="col-md-3" style="align-text: center;">
-			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=mirraona@buffalo.edu&su=Contact"><i class="fa fa-envelope-o fa-fw fa-3x" aria-hidden="true"></i></a>
-
-
-
-		</div>
-
-
 
 	</div>
 	<br>
