--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="ICON" href="MIR.jpg"</link>
+	<link rel="icon" href="MIR.jpg"</link>
 	<title>Mir Raonaq | Home Page</title>
 	<meta name="author" content="Mir Raonaq">
 	<meta name="application" content="Atom">
-	<meta charset="utf-8"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="index.css" type="text/css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<link rel="stylesheet" href="index.css" type="text/css">
 
 
 
@@ -31,7 +29,7 @@
 
 	<div id="footer">
 		<br>
-		<h2>&copy; Mir Raonaq &middot; Made with Atom &middot; Last modified on April 17, 2017</h2>
+		<h2>&copy; Mir Raonaq &middot; Made with Atom &middot; Last modified on May 9, 2017</h2>
 	</div>
 
 	<script>
@@ -44,7 +42,6 @@
 				var thehref = this.getAttribute('href')
 				event.preventDefault();
 				jQuery('body').fadeOut(function(){
-					//alert(thehref)
 					window.location = thehref
 				});
 			}
@@ -73,9 +70,5 @@
 	<br>
 
 
-
-	<script src="https://use.fontawesome.com/8ec277403e.js"></script>
-	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
