--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <ul>
 	<li><a href="index.html">Home</a></li>
-	<li><a href="Resume.pdf">Resume</a></li>
+	<li><a href="projects.html">Projects</a></li>
+	<li><a href="Resume.pdf" target="_blank">Resume</a></li>
 	<li><a href="Media.html">Social Media</a></li>
 </ul>
 </body>
