--- a/Media.html
+++ b/Media.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="ICON" href="MIR.jpg"</link>
+	<link rel="icon" href="MIR.jpg">
 	<title>Mir Raonaq | Contact </title>
 	<meta name="author" content="Mir Raonaq">
 	<meta name="application" content="Atom">
@@ -19,7 +19,6 @@
 	<li><a href="Resume.pdf">Resume</a></li>
 	<li><a href="Media.html">Social Media</a></li>
 </ul>
-</body>
 <body>
 
 
