--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="icon" href="MIR.jpg"</link>
+	<link rel="icon" href="MIR.jpg">
 	<title>Mir Raonaq | Home Page</title>
 	<meta name="author" content="Mir Raonaq">
 	<meta name="application" content="Atom">
@@ -18,7 +18,6 @@
 	<li><a href="Resume.pdf" target="_blank">Resume</a></li>
 	<li><a href="Media.html">Social Media</a></li>
 </ul>
-</body>
 <body>
 	<h1> Mir Raonaq </h1>
 	<hr>
