--- a/Media.html
+++ b/Media.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="icon" href="MIR.jpg">
-	<title>Mir Raonaq | Contact </title>
+	<title>Mir Raonaq | Social Media </title>
 	<meta name="author" content="Mir Raonaq">
 	<meta name="application" content="Atom">
 	<meta charset="utf-8"/>
