--- a/Media.html
+++ b/Media.html
@@ -15,7 +15,7 @@
 <body>
 	<ul>
 		<li><a href="index.html">Home</a></li>
-		<li><a href="projects.html">Projects</a></li>
+		<li><a href="projects.html">Portfolio</a></li>
 		<li><a href="Resume.pdf">Resume</a></li>
 		<li><a href="Media.html">Social Media</a></li>
 	</ul>
