--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<link rel="stylesheet" href="index.css" type="text/css">
-
-
-
 </head>
+
 <body>
 
 	<ul>
 		<li><a href="index.html">Home</a></li>
-		<li><a href="projects.html">Projects</a></li>
+		<li><a href="projects.html">Portfolio</a></li>
 		<li><a href="Resume.pdf" target="_blank">Resume</a></li>
 		<li><a href="Media.html">Social Media</a></li>
 	</ul>
@@ -66,7 +64,7 @@
 
 	});
 	</script>
-	
+
 	<br>
 	<br>
 	<br>
