--- a/Media.html
+++ b/Media.html
@@ -97,7 +97,7 @@
 		</div>
 
 	<div class="col-md-2">
-		<a href="https://twitter.com/MirMVP"><i class="fa fa-twitter fa-fw fa-3x" aria-hidden="true"></i></a>
+		<a href="https://twitter.com/MirRaonaq"><i class="fa fa-twitter fa-fw fa-3x" aria-hidden="true"></i></a>
 
 	</div>
 
