--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 	<img src="Picture.PNG" height="500" width="300"
 	alt="There is supposed to be an image here."/>
 	<br>
-	<p> Computer Science student at University at Buffalo seeking to obtain professional experience with an engineering establishment to apply problem solving skills and creativity to help generate innovative ideas. </p>
+	<p> Pursuing Bachelors of Science degree in Computer Science at University at Buffalo,<br> seeking to obtain professional experience with an engineering establishment to apply problem solving skills and creativity to help generate innovative ideas.
+ </p>
 
 	<div id="footer">
 		<br>
