--- a/Media.html
+++ b/Media.html
@@ -17,7 +17,7 @@
 		<li><a href="index.html">Home</a></li>
 		<li><a href="projects.html">Portfolio</a></li>
 		<li><a href="Resume.pdf" target="_blank">Resume</a></li>
-		<li><a href="Media.html">Social Media</a></li>
+		<li><a href="Media.html">Contact</a></li>
 	</ul>
 
 
@@ -67,6 +67,39 @@
 
 
 	</div>
+	<form id="formWebPage" method="post" action="mailto:mirraona@buffalo.edu">
+
+<div class ="row" id="fl">
+	<div class="col-md-5">
+<label >First Name<span style="color: red;" >*</span></label>
+<input name="firstName" placeholder="First Name" required>
+	</div>
+
+		<div class="col-md-5">
+<label >Last Name<span style="color: red;" >*</span></label>
+<input name="lastName" placeholder="Last Name" required>
+	</div>
+		</div>
+
+	<div class="row form">
+			<div class ="col-md-10">
+<label>E-mail<span style="color: red;" >*</span></label>
+<input name="email" type="email" placeholder="E-mail" required>
+					<br>
+<br>
+<label>Message<span style="color: red;" >*</span></label>
+<textarea name="message" placeholder="Message" required></textarea>
+
+<br>
+<br>
+
+
+<input id="submit" name="submit" type="submit" value="Submit">
+			</div>
+		</div>
+
+</form>
+
 
 	<hr>
 
