--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<li><a href="index.html">Home</a></li>
 		<li><a href="projects.html">Portfolio</a></li>
 		<li><a href="Resume.pdf" target="_blank">Resume</a></li>
-		<li><a href="Media.html">Social Media</a></li>
+		<li><a href="Media.html">Contact</a></li>
 	</ul>
 
 	<h1> Mir Raonaq </h1>
