--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,14 @@
     <li><a href="Resume.pdf" target="_blank">Resume</a></li>
     <li><a href="Media.html">Contact</a></li>
   </ul>
+  <h1> Projects </h1>
+  <br>
+
+  <div class="image-with-text">
+<img style="border:2px solid black;" src="Shane.png" width="100" alt="Shane.ai" />
+<p> <a href="https://devpost.com/software/shane-ai#_=_" style="text-align:center; background: url('button.png'); width: 100px; height: 50px;">Shane.ai</a> </p>
+
+</div>
 
   <script>
 	jQuery('body').css('display','none');
