--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 
   <div class="image-with-text">
 <img style="border:2px solid black;" src="Shane.png" width="100" alt="Shane.ai" />
-<p> <a href="https://devpost.com/software/shane-ai#_=_" style="text-align:center; background: url('button.png'); width: 100px; height: 50px;">Shane.ai</a> </p>
+<p> <a href="https://devpost.com/software/shane-ai#_=_" target="_blank" style="text-align:center; background: url('button.png'); width: 100px; height: 50px;">Shane.ai</a> </p>
 
 </div>
 
