--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<img src="Picture.PNG" height="500" width="300"
 	alt="There is supposed to be an image here."/>
 	<br>
-	<p> Pursuing Bachelors of Science degree in Computer Science at University at Buffalo.
+	<p> Pursuing Bachelors of Science degree in Computer Science at SUNY Buffalo. </p>
  </p>
 
 
