--- a/projects.html
+++ b/projects.html
@@ -20,10 +20,24 @@
   </ul>
   <h1> Projects </h1>
   <br>
+  <div class ="row" style="align-item: center;">
+    <div class="image-with-text">
+      <div class ="col-md-2">
 
+    <img style="border:2px solid black;" src="linx.png" width="100" height="100" alt="Linx" />
+    <p> <a href="http://www.hackathon.io/83207" target="_blank" style="text-align:center; background: url('button.png'); width: 100px; height: 50px;">Linx</a> </p>
+    </div>
+    </div>
   <div class="image-with-text">
-<img style="border:2px solid black;" src="Shane.png" width="100" alt="Shane.ai" />
+    <div class ="col-md-2">
+
+<img style="border:2px solid black;" src="shane.png" width="100" height="100" alt="Shane.ai" />
 <p> <a href="https://devpost.com/software/shane-ai#_=_" target="_blank" style="text-align:center; background: url('button.png'); width: 100px; height: 50px;">Shane.ai</a> </p>
+</div>
+</div>
+<br>
+
+
 
 </div>
 
