--- a/projects.html
+++ b/projects.html
@@ -25,14 +25,14 @@
       <div class ="col-md-2">
 
     <img style="border:2px solid black;" src="linx.png" width="100" height="100" alt="Linx" />
-    <p> <a href="http://www.hackathon.io/83207" target="_blank" style="text-align:center; background: url('button.png'); width: 100px; height: 50px;">Linx</a> </p>
+    <p> <a href="http://www.hackathon.io/83207" target="_blank" style="text-align:center; width: 100px; height: 50px;">Linx</a> </p>
     </div>
     </div>
   <div class="image-with-text">
     <div class ="col-md-2">
 
 <img style="border:2px solid black;" src="shane.png" width="100" height="100" alt="Shane.ai" />
-<p> <a href="https://devpost.com/software/shane-ai#_=_" target="_blank" style="text-align:center; background: url('button.png'); width: 100px; height: 50px;">Shane.ai</a> </p>
+<p> <a href="https://devpost.com/software/shane-ai#_=_" target="_blank" style="text-align:center; width: 100px; height: 50px;">Shane.ai</a> </p>
 </div>
 </div>
 <br>
