--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 		<li><a href="Media.html">Contact</a></li>
 	</ul>
 
-	<h1> Mir Raonaq </h1>
+	<h1>Mir Raonaq </h1>
+	<h2><em>Developer | Designer  | Competitor </em></h2>
 	<hr>
 
 	<img src="Picture.PNG" height="500" width="300"
 	alt="There is supposed to be an image here."/>
 	<br>
-	<p> Pursuing Bachelors of Science degree in Computer Science at SUNY Buffalo. </p>
+	<p> Pursuing Bachelors of Science degree in Computer Science at SUNY Buffalo with a minor in Economics. </p>
  </p>
 
 
