--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<h2><em>Developer | Designer  | Competitor </em></h2>
 	<hr>
 
-	<img src="Picture.PNG" height="500" width="300"
+	<img src="NewPro.PNG" height="500" width="300"
 	alt="There is supposed to be an image here."/>
 	<br>
 	<p> Pursuing Bachelors of Science degree in Computer Science at SUNY Buffalo with a minor in Economics. </p>
