--- a/Media.html
+++ b/Media.html
@@ -16,7 +16,7 @@
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="projects.html">Portfolio</a></li>
-		<li><a href="Resume.pdf" target="_blank">Resume</a></li>
+		<li><a href="NewwResume.pdf" target="_blank">Resume</a></li>
 		<li><a href="Media.html">Contact</a></li>
 	</ul>
 
@@ -31,7 +31,7 @@
 				var thehref = this.getAttribute('href')
 				event.preventDefault();
 				jQuery('body').fadeOut(function(){
-					
+
 					window.location = thehref
 				});
 			}
