--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="projects.html">Portfolio</a></li>
-    <li><a href="Resume.pdf" target="_blank">Resume</a></li>
+    <li><a href="NewwResume.pdf" target="_blank">Resume</a></li>
     <li><a href="Media.html">Contact</a></li>
   </ul>
   <h1> Projects </h1>
