--- a/Media.html
+++ b/Media.html
@@ -17,6 +17,7 @@
 		<li><a href="index.html">Home</a></li>
 		<li><a href="projects.html">Portfolio</a></li>
 		<li><a href="NewwResume.pdf" target="_blank">Resume</a></li>
+		<li><a href="https://www.acsu.buffalo.edu/~mirraona/" target="_blank">CV</a></li>
 		<li><a href="Media.html">Contact</a></li>
 	</ul>
 
@@ -105,34 +106,39 @@
 
 	<div class ="row" style="align-item: center;">
 
-		<div class ="col-md-2">
-			<a href="https://www.linkedin.com/in/mirraonaq/"><i class="fa fa-linkedin fa-fw fa-3x" aria-hidden="true"></i></a>
+		<div class ="col-md-1">
+			<a href="https://www.linkedin.com/in/mirraonaq/" target="_blank"><i class="fa fa-linkedin fa-fw fa-3x" aria-hidden="true"></i></a>
 
 		</div>
 
-		<div class="col-md-2">
-			<a href="https://github.com/MirRaonaq"><i class="fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
+		<div class="col-md-1">
+			<a href="https://github.com/MirRaonaq" target="_blank"><i class="fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
 
 		</div>
 
-		<div class="col-md-2" style="align-text: center;">
-			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=mirraona@buffalo.edu&su=Contact"><i class="fa fa-envelope-o fa-fw fa-3x" aria-hidden="true"></i></a>
+		<div class="col-md-1" style="align-text: center;">
+			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=mirraona@buffalo.edu&su=Contact" target="_blank"><i class="fa fa-envelope-o fa-fw fa-3x" aria-hidden="true"></i></a>
 
 		</div>
 
-		<div class="col-md-2" style="align-text: center;">
-			<a href="https://www.instagram.com/mir_raonaq/"><i class="fa fa-instagram fa-fw fa-3x" aria-hidden="true"></i></a>
+		<div class="col-md-1" style="align-text: center;">
+			<a href="https://www.instagram.com/mir_raonaq/" target="_blank"><i class="fa fa-instagram fa-fw fa-3x" aria-hidden="true"></i></a>
 
 		</div>
-		<div class="col-md-2">
-			<a href="https://www.facebook.com/MirRaonaq"><i class="fa fa-facebook fa-fw fa-3x" aria-hidden="true"></i></a>
+		<div class="col-md-1">
+			<a href="https://www.facebook.com/MirRaonaq" target="_blank"><i class="fa fa-facebook fa-fw fa-3x" aria-hidden="true"></i></a>
 
 		</div>
 
-	<div class="col-md-2">
-		<a href="https://twitter.com/MirRaonaq"><i class="fa fa-twitter fa-fw fa-3x" aria-hidden="true"></i></a>
+	<div class="col-md-1">
+		<a href="https://twitter.com/MirRaonaq" target="_blank"><i class="fa fa-twitter fa-fw fa-3x" aria-hidden="true"></i></a>
 
 	</div>
+	<div class="col-md-1">
+		<a href="https://www.acsu.buffalo.edu/~mirraona/" target="_blank"><i class="fa fa-globe fa-fw fa-3x" aria-hidden="true"></i></a>
+
+	</div>
+
 
 	</div>
 	<br>
