--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<li><a href="index.html">Home</a></li>
 		<li><a href="projects.html">Portfolio</a></li>
 		<li><a href="NewwResume.pdf" target="_blank">Resume</a></li>
+		<li><a href="https://www.acsu.buffalo.edu/~mirraona/" target="_blank">CV</a></li>
 		<li><a href="Media.html">Contact</a></li>
 	</ul>
 
