--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
 		<li><a href="projects.html">Portfolio</a></li>
 		<li><a href="NewwResume.pdf" target="_blank">Resume</a></li>
 		<li><a href="https://www.acsu.buffalo.edu/~mirraona/" target="_blank">CV</a></li>
-		<li><a href="Media.html">Contact</a></li>
 	</ul>
 
 	<h1>Mir Raonaq </h1>
 	<h2><em>Developer | Designer  | Competitor </em></h2>
 	<hr>
 
-	<img src="NewPro.PNG" height="500" width="300"
+	<img src="NewPic.jpg" height="300" width="300"
 	alt="There is supposed to be an image here."/>
 	<br>
 	<p> Pursuing Bachelors of Science degree in Computer Science at SUNY Buffalo with a minor in Economics. </p>
@@ -63,11 +62,42 @@
 
 	});
 	</script>
+	<hr>
+	<div class ="row" style="align-item: center;">
+
+		<div class ="col-md-2">
+			<a href="https://www.linkedin.com/in/mirraonaq/" target="_blank"><i class="fa fa-linkedin fa-fw fa-3x" aria-hidden="true"></i></a>
+
+		</div>
+
+		<div class="col-md-2">
+			<a href="https://github.com/MirRaonaq" target="_blank"><i class="fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
+
+		</div>
+
+
+		<div class="col-md-2" style="align-text: center;">
+			<a href="https://www.instagram.com/mir_raonaq/" target="_blank"><i class="fa fa-instagram fa-fw fa-3x" aria-hidden="true"></i></a>
+
+		</div>
+		<div class="col-md-2">
+			<a href="https://www.facebook.com/MirRaonaq" target="_blank"><i class="fa fa-facebook fa-fw fa-3x" aria-hidden="true"></i></a>
+
+		</div>
+
+	<div class="col-md-2">
+		<a href="https://twitter.com/MirRaonaq" target="_blank"><i class="fa fa-twitter fa-fw fa-3x" aria-hidden="true"></i></a>
+
+	</div>
+	<div class="col-md-1" style="align-text: center;">
+			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=mirraona@buffalo.edu&su=Contact" target="_blank"><i class="fa fa-envelope-o fa-fw fa-3x" aria-hidden="true"></i></a>
+
+	</div>
+</div>
 
 	<br>
-	<br>
-	<br>
 
+	<script src="https://use.fontawesome.com/8ec277403e.js"></script>
 
 </body>
 </html>
