--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="projects.html">Portfolio</a></li>
-		<li><a href="Mir_Raonaq_Resume.pdf" target="_blank">Resume</a></li>
+		<li><a href="MirRaonaq_Resume.pdf" target="_blank">Resume</a></li>
 		<li><a href="https://www.acsu.buffalo.edu/~mirraona/" target="_blank">CV</a></li>
 	</ul>
 
