--- a/index.html
+++ b/index.html
@@ -1,103 +1,198 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Miniport by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<head>
-	<link rel="icon" href="MIR.jpg">
-	<title>Mir Raonaq | Home Page</title>
-	<meta name="author" content="Mir Raonaq">
-	<meta name="application" content="Atom">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<link rel="stylesheet" href="index.css" type="text/css">
-</head>
+	<head>
+		<link rel="icon" href="MIR.jpg">
+		<title>Mir Raonaq</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body>
 
-<body>
+		<!-- Nav -->
+			<nav id="nav">
+				<ul class="container">
+					<li><a href="#top">Home</a></li>
+					<li><a href="#work">Interests</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
 
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="projects.html">Portfolio</a></li>
-		<li><a href="MirRaonaq_Resume.pdf" target="_blank">Resume</a></li>
-		<li><a href="https://www.acsu.buffalo.edu/~mirraona/" target="_blank">CV</a></li>
-	</ul>
+		<!-- Home -->
+			<div class="wrapper style1 first">
+				<article class="container" id="top">
+					<div class="row">
+						<div class="4u 12u(mobile)">
+							<span class="image fit"><img src="NewPic.jpg" alt="" /></span>
+						</div>
+						<div class="8u 12u(mobile)">
+							<header>
+								<h1>Hi.<br><br> I'm <strong>Mir Raonaq</strong>.</h1>
+							</header>
+							<p>Developer | Designer | Competitor</p>
+							<a href="MirRaonaqResume.pdf" target="_blank" class="button big scrolly">Resume</a>
+							<a href="https://www.acsu.buffalo.edu/~mirraona/" target="_blank" class="button big scrolly">CV</a>
+						</div>
+					</div>
+				</article>
+			</div>
 
-	<h1>Mir Raonaq </h1>
-	<h2><em>Developer | Designer  | Competitor </em></h2>
-	<hr>
+		<!-- Work -->
+			<div class="wrapper style2">
+				<article id="work">
+					<header>
+						<h2>My Interests</h2>
+						<p></p>
+					</header>
+					<div class="container">
+						<div class="row">
+							<div class="4u 12u(mobile)">
+								<section class="box style1">
+									<span class="icon featured fa-laptop"></span>
+									<h3>Programming</h3>
+									<p>Aspiring software developer, with a passion to construct innovative web and mobile apps.</p>
+								</section>
+							</div>
+							<div class="4u 12u(mobile)">
+								<section class="box style1">
+									<span class="icon featured fa-globe"></span>
+									<h3>Designing </h3>
+									<p>Front-end development is my favorite part of a project. Displaying my imagination on a screen is unbelievable.</p>
+								</section>
+							</div>
+							<div class="4u 12u(mobile)">
+								<section class="box style1">
+									<span class="icon featured fa-heart"></span>
+									<h3>Competing</h3>
+									<p>Weather it be in basketball tournaments or hackathons. Giving a 100% effort is all that is needed.</p>
+								</section>
+							</div>
+						</div>
+					</div>
+					<footer>
+						<p></p>
+						<a href="#portfolio" class="button big scrolly">My Projects</a>
+					</footer>
+				</article>
+			</div>
 
-	<img src="NewPic.jpg" height="300" width="300"
-	alt="There is supposed to be an image here."/>
-	<br>
-	<p> Pursuing Bachelors of Science degree in Computer Science at SUNY Buffalo with a minor in Economics. </p>
- </p>
+		<!-- Portfolio -->
+			<div class="wrapper style3">
+				<article id="portfolio">
+					<header>
+						<h2>Projects</h2>
+						<p>Projects I have built myself and in groups.</p>
+					</header>
+					<div class="container">
+						<div class="row">
+							<div class="4u 12u(mobile)">
+								<article class="box style2">
+									<a href="https://devpost.com/software/shane-ai#_=_" target="_blank" class="image featured"><img src="shane.png" alt="Shane.ai" /></a>
+									<h3><a href="https://devpost.com/software/shane-ai#_=_" target="_blank">Shane.ai</a></h3>
+									<p>Bot that builds resumes.</p>
+								</article>
+							</div>
+							<div class="4u 12u(mobile)">
+								<article class="box style2">
+									<a href="http://www.hackathon.io/83207" target="_blank"class="image featured"><img src="linx.png" alt="Linx" /></a>
+									<h3><a href="http://www.hackathon.io/83207"target="_blank">Linx</a></h3>
+									<p>Language learning tool</p>
+								</article>
+							</div>
 
+							<div class="4u 12u(mobile)">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="AlgebraMaster.png" alt="Algebra" /></a>
+									<h3><a href="#">Algebra Master</a></h3>
+									<p>Learn basic algebra.</p>
+								</article>
+							</div>
+						</div>
+						<!--
+						<div class="row">
+							<div class="4u 12u(mobile)">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+									<h3><a href="#">Tempus dolore</a></h3>
+									<p>Ornare nulla proin odio consequat.</p>
+								</article>
+							</div>
+							<div class="4u 12u(mobile)">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+									<h3><a href="#">Feugiat aliquam</a></h3>
+									<p>Ornare nulla proin odio consequat.</p>
+								</article>
+							</div>
+							<div class="4u 12u(mobile)">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+									<h3><a href="#">Sed amet ornare</a></h3>
+									<p>Ornare nulla proin odio consequat.</p>
+								</article>
+							</div>
+						</div>
+					</div>
+					-->
+					<footer>
+						<p>More projects coming soon . . .</p>
+						<a href="#contact" class="button big scrolly">Get in touch with me</a>
+					</footer>
+				</article>
+			</div>
 
-	<script>
-	jQuery('body').css('display','none');
-	jQuery(document).ready(function() {
-		jQuery('body').fadeIn();
-		jQuery('a').on('click',function(event){
-			var thetarget = this.getAttribute('target')
-			if (thetarget != "_blank"){
-				var thehref = this.getAttribute('href')
-				event.preventDefault();
-				jQuery('body').fadeOut(function(){
-					window.location = thehref
-				});
-			}
-		});
-	});
-	setTimeout(function(){
-		jQuery('body').fadeIn();
-	},1000)
-	</script>
+		<!-- Contact -->
+			<div class="wrapper style4">
+				<article id="contact" class="container 75%">
+						<div class="row">
+							<div class="12u">
+								<h3>Connect with me</h3>
+								<ul class="social">
+									<li><a href="https://twitter.com/MirRaonaq" target="_blank"class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.facebook.com/MirRaonaq" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.linkedin.com/in/mirraonaq/" target="_blank"class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.instagram.com/mir_raonaq/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/MirRaonaq" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+									<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=mirraona@buffalo.edu&su=Contact" target="_blank" class="icon fa-envelope"><span class="label">Email</span></a></li>
+									<!--
+									<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+									<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+									<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+									<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
+									<li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
+									<li><a href="#" class="icon fa-foursquare"><span>Foursquare</span></a></li>
+									<li><a href="#" class="icon fa-skype"><span>Skype</span></a></li>
+									<li><a href="#" class="icon fa-soundcloud"><span>Soundcloud</span></a></li>
+									<li><a href="#" class="icon fa-youtube"><span>YouTube</span></a></li>
+									<li><a href="#" class="icon fa-blogger"><span>Blogger</span></a></li>
+									<li><a href="#" class="icon fa-flickr"><span>Flickr</span></a></li>
+									<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
+									-->
+								</ul>
+								<hr />
+							</div>
+						</div>
+					</div>
+				</article>
+			</div>
 
-	<script type="text/javascript">
-	window.addEventListener('keydown', function (event) {
-		if (event.keyCode === 123 || event.keyCode === 17 || event.keyCode === 85 || event.keyCode === 73 || event.keyCode === 16 || event.keyCode === 67) {
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/skel-viewport.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
 
-			event.preventDefault();
-
-			return false;
-		}
-
-
-	});
-	</script>
-	<hr>
-	<div class ="row" style="align-item: center;">
-
-		<div class ="col-md-2">
-			<a href="https://www.linkedin.com/in/mirraonaq/" target="_blank"><i class="fa fa-linkedin fa-fw fa-3x" aria-hidden="true"></i></a>
-
-		</div>
-
-		<div class="col-md-2">
-			<a href="https://github.com/MirRaonaq" target="_blank"><i class="fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
-
-		</div>
-
-
-		<div class="col-md-2" style="align-text: center;">
-			<a href="https://www.instagram.com/mir_raonaq/" target="_blank"><i class="fa fa-instagram fa-fw fa-3x" aria-hidden="true"></i></a>
-
-		</div>
-		<div class="col-md-2">
-			<a href="https://www.facebook.com/MirRaonaq" target="_blank"><i class="fa fa-facebook fa-fw fa-3x" aria-hidden="true"></i></a>
-
-		</div>
-
-	<div class="col-md-2">
-		<a href="https://twitter.com/MirRaonaq" target="_blank"><i class="fa fa-twitter fa-fw fa-3x" aria-hidden="true"></i></a>
-
-	</div>
-	<div class="col-md-1" style="align-text: center;">
-			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=mirraona@buffalo.edu&su=Contact" target="_blank"><i class="fa fa-envelope-o fa-fw fa-3x" aria-hidden="true"></i></a>
-
-	</div>
-</div>
-
-	<br>
-
-	<script src="https://use.fontawesome.com/8ec277403e.js"></script>
-
-</body>
+	</body>
 </html>
