--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
-								<h1>Hi.<br><br> I'm <strong>Mir Raonaq</strong>.</h1>
+								<h1>Hi,<br><br> I'm <strong>Mir Raonaq</strong>.</h1>
 							</header>
 							<p>Developer | Designer | Competitor</p>
-							<a href="MirRaonaqResume.pdf" target="_blank" class="button big scrolly">Resume</a>
+							<a href="MirRaonaqResume.pdf" target="_blank" class="button big scrolly">Résumé</a>
 							<a href="https://www.acsu.buffalo.edu/~mirraona/" target="_blank" class="button big scrolly">CV</a>
 						</div>
 					</div>
@@ -66,7 +66,7 @@
 								<section class="box style1">
 									<span class="icon featured fa-globe"></span>
 									<h3>Designing </h3>
-									<p>Front-end development is my favorite part of a project. Displaying my imagination on a screen is unbelievable.</p>
+									<p>Front-end is my favorite part of a project. Displaying my imagination on a screen is unbelievable.</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
@@ -98,7 +98,7 @@
 								<article class="box style2">
 									<a href="https://devpost.com/software/shane-ai#_=_" target="_blank" class="image featured"><img src="shane.png" alt="Shane.ai" /></a>
 									<h3><a href="https://devpost.com/software/shane-ai#_=_" target="_blank">Shane.ai</a></h3>
-									<p>Bot that builds resumes.</p>
+									<p>Bot that builds résumés.</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
@@ -111,8 +111,8 @@
 
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="AlgebraMaster.png" alt="Algebra" /></a>
-									<h3><a href="#">Algebra Master</a></h3>
+									<a href="WowMe.html" target="_blank" class="image featured"><img src="AlgebraMaster.png" alt="Algebra" /></a>
+									<h3><a href="WowMe.html" target="_blank">Algebra Master</a></h3>
 									<p>Learn basic algebra.</p>
 								</article>
 							</div>
@@ -145,7 +145,6 @@
 					-->
 					<footer>
 						<p>More projects coming soon . . .</p>
-						<a href="#contact" class="button big scrolly">Get in touch with me</a>
 					</footer>
 				</article>
 			</div>
