--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								<section class="box style1">
 									<span class="icon featured fa-heart"></span>
 									<h3>Competing</h3>
-									<p>Weather it be in basketball tournaments or hackathons. Giving a 100% effort is all that is needed.</p>
+									<p>Whether it be in basketball tournaments or hackathons. Giving a 100% effort is all that is needed.</p>
 								</section>
 							</div>
 						</div>
