--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 							</header>
 							<p>Developer | Designer | Competitor</p>
 							<a href="MirRaonaqResume.pdf" target="_blank" class="button big scrolly">Résumé</a>
-							<a href="https://www.acsu.buffalo.edu/~mirraona/" target="_blank" class="button big scrolly">CV</a>
 						</div>
 					</div>
 				</article>
@@ -66,7 +65,7 @@
 								<section class="box style1">
 									<span class="icon featured fa-globe"></span>
 									<h3>Designing </h3>
-									<p>Front-end is my favorite part of a project. Displaying my imagination on a screen is unbelievable.</p>
+									<p>Front-end is my favorite part of a project. The ability to exhibit an idea on screen is remarkable.</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
