--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
 								<article class="box style2">
 									<a href="https://devpost.com/software/shane-ai#_=_" target="_blank" class="image featured"><img src="shane.png" alt="Shane.ai" /></a>
 									<h3><a href="https://devpost.com/software/shane-ai#_=_" target="_blank">Shane.ai</a></h3>
-									<p>Bot that builds résumés.</p>
+									<p>Bot that builds résumés</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="http://www.hackathon.io/83207" target="_blank"class="image featured"><img src="linx.png" alt="Linx" /></a>
-									<h3><a href="http://www.hackathon.io/83207"target="_blank">Linx</a></h3>
+									<a href="https://linxsolutions.net/anime" target="_blank"class="image featured"><img src="logo2.png" alt="Linx" /></a>
+									<h3><a href="https://linxsolutions.net/anime"target="_blank">Linx</a></h3>
 									<p>Language learning tool</p>
 								</article>
 							</div>
@@ -112,7 +112,7 @@
 								<article class="box style2">
 									<a href="WowMe.html" target="_blank" class="image featured"><img src="AlgebraMaster.png" alt="Algebra" /></a>
 									<h3><a href="WowMe.html" target="_blank">Algebra Master</a></h3>
-									<p>Learn basic algebra.</p>
+									<p>Learn basic algebra</p>
 								</article>
 							</div>
 						</div>
