--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="WowMe.html" target="_blank" class="image featured"><img src="AlgebraMaster.png" alt="Algebra" /></a>
-									<h3><a href="WowMe.html" target="_blank">Algebra Master</a></h3>
+									<img src="AlgebraMaster.png" alt="Algebra" />
+									<h3>Algebra Master</h3>
 									<p>Learn basic algebra</p>
 								</article>
 							</div>
