--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">Home</a></li>
-					<li><a href="#work">Interests</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
@@ -45,44 +44,7 @@
 				</article>
 			</div>
 
-		<!-- Work -->
-			<div class="wrapper style2">
-				<article id="work">
-					<header>
-						<h2>My Interests</h2>
-						<p></p>
-					</header>
-					<div class="container">
-						<div class="row">
-							<div class="4u 12u(mobile)">
-								<section class="box style1">
-									<span class="icon featured fa-laptop"></span>
-									<h3>Programming</h3>
-									<p>Aspiring software developer, with a passion to construct innovative web and mobile apps.</p>
-								</section>
-							</div>
-							<div class="4u 12u(mobile)">
-								<section class="box style1">
-									<span class="icon featured fa-globe"></span>
-									<h3>Designing </h3>
-									<p>Front-end is my favorite part of a project. The ability to exhibit an idea on screen is remarkable.</p>
-								</section>
-							</div>
-							<div class="4u 12u(mobile)">
-								<section class="box style1">
-									<span class="icon featured fa-heart"></span>
-									<h3>Competing</h3>
-									<p>Whether it be in basketball tournaments or hackathons. Giving a 100% effort is all that is needed.</p>
-								</section>
-							</div>
-						</div>
-					</div>
-					<footer>
-						<p></p>
-						<a href="#portfolio" class="button big scrolly">My Projects</a>
-					</footer>
-				</article>
-			</div>
+
 
 		<!-- Portfolio -->
 			<div class="wrapper style3">
@@ -110,8 +72,8 @@
 
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<img src="AlgebraMaster.png" alt="Algebra" />
-									<h3>Algebra Master</h3>
+									<a target="_blank" class="image featured"><img src="AlgebraMaster.png" alt="Algebra" /></a>
+									<h3><a target="_blank">Algebra Master</a></h3>
 									<p>Learn basic algebra</p>
 								</article>
 							</div>
