--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 									<li><a href="https://www.instagram.com/mir_raonaq/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/MirRaonaq" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 										<!--
-									<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=mirraona@buffalo.edu&su=Contact" target="_blank" class="icon fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="" target="_blank" class="icon fa-envelope"><span class="label">Email</span></a></li>
 									<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 									<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
 									<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
