--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<h1>Hi,<br><br> I'm <strong>Mir Raonaq</strong>.</h1>
 							</header>
 							<p>Developer | Designer | Competitor</p>
-							<a href="UpdatedMir.pdf" target="_blank" class="button big scrolly">Résumé</a>
+							<a href="Resume.pdf" target="_blank" class="button big scrolly">Résumé</a>
 						</div>
 					</div>
 				</article>
