Algebra master update

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a target="_blank" class="image featured"><img src="AlgebraMaster.png" alt="Algebra" /></a>
-									<h3><a target="_blank">Algebra Master</a></h3>
+									<a href="https://github.com/MirRaonaq/AlgebraMaster"target="_blank" class="image featured"><img src="AlgebraMaster.png" alt="Algebra" /></a>
+									<h3><a href="https://github.com/MirRaonaq/AlgebraMaster"target="_blank">Algebra Master</a></h3>
 									<p>Learn basic algebra</p>
 								</article>
 							</div>
