--- a/index.html
+++ b/index.html
@@ -43,9 +43,33 @@
 				<article id="portfolio">
 					<header>
 						<h2>Projects</h2>
-						<p>Projects I have built myself and in groups.</p>
 					</header>
 					<div class="container">
+						<div class="row">
+							<div class="4u 12u(mobile)">
+								<article class="box style2">
+									<a href="http://mirraonaq.me/FoodBasket.github.io/" target="_blank"class="image featured"><img src="logo.png" alt="Food Basket" /></a>
+									<h3><a href="http://mirraonaq.me/FoodBasket.github.io/" target="_blank">Food Basket</a></h3>
+									<p>Share and claim free food and items!</p>
+								</article>
+							</div>
+							<div class="4u 12u(mobile)">
+								<article class="box style">
+									<a href="https://linxsolutions.net/anime" target="_blank"class="image featured"><img src="logo2.png" alt="Linx" /></a>
+									<h3><a href="https://linxsolutions.net/anime"target="_blank">Linx</a></h3>
+									<p>Language learning tool</p>
+								</article>
+							</div>
+
+							<div class="4u 12u(mobile)">
+								<article class="box style">
+									<a href="https://github.com/MirRaonaq/AlgebraMaster"target="_blank" class="image featured"><img src="AlgebraMaster.png" alt="Algebra" /></a>
+									<h3><a href="https://github.com/MirRaonaq/AlgebraMaster"target="_blank">Algebra Master</a></h3>
+									<p>Learn basic algebra</p>
+								</article>
+							</div>
+						</div>
+
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
@@ -54,31 +78,7 @@
 									<p>Bot that builds résumés</p>
 								</article>
 							</div>
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="https://linxsolutions.net/anime" target="_blank"class="image featured"><img src="logo2.png" alt="Linx" /></a>
-									<h3><a href="https://linxsolutions.net/anime"target="_blank">Linx</a></h3>
-									<p>Language learning tool</p>
-								</article>
-							</div>
-
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="https://github.com/MirRaonaq/AlgebraMaster"target="_blank" class="image featured"><img src="AlgebraMaster.png" alt="Algebra" /></a>
-									<h3><a href="https://github.com/MirRaonaq/AlgebraMaster"target="_blank">Algebra Master</a></h3>
-									<p>Learn basic algebra</p>
-								</article>
-							</div>
-						</div>
-						<!--
-						<div class="row">
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-									<h3><a href="#">Tempus dolore</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
+							<!--
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
