--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style">
-									<a href="https://linxsolutions.net/anime" target="_blank"class="image featured"><img src="logo2.png" alt="Linx" /></a>
-									<h3><a href="https://linxsolutions.net/anime"target="_blank">Linx</a></h3>
+									<a href="http://www.hackathon.io/83207" target="_blank"class="image featured"><img src="logo2.png" alt="Linx" /></a>
+									<h3><a href="http://www.hackathon.io/83207"target="_blank">Linx</a></h3>
 									<p>Language learning tool</p>
 								</article>
 							</div>
