--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 									<p>Bot that builds résumés</p>
 								</article>
 							</div>
-							<!--
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-									<h3><a href="#">Feugiat aliquam</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<a href="https://devpost.com/software/accurately-insured-business#" target="_blank" class="image featured"><img src="logo3.PNG" alt="AIB" /></a>
+									<h3><a href="https://devpost.com/software/accurately-insured-business#"t arget="_blank">Accurately Insured Business</a></h3>
+									<p>Get insured right!</p>
 								</article>
 							</div>
+							<!--
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
