--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<article class="box style2">
 									<a href="https://devpost.com/software/accurately-insured-business#" target="_blank" class="image featured"><img src="logo3.PNG" alt="AIB" /></a>
 									<h3><a href="https://devpost.com/software/accurately-insured-business#"t arget="_blank">Accurately Insured Business</a></h3>
-									<p>Get insured right!</p>
+									<p>Business owners to get better coverage from real time analytics using artificial intelligence. </p>
 								</article>
 							</div>
 							<!--
