--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="http://mirraonaq.me/FoodBasket.github.io/" target="_blank"class="image featured"><img src="logo.png" alt="Food Basket" /></a>
-									<h3><a href="http://mirraonaq.me/FoodBasket.github.io/" target="_blank">Food Basket</a></h3>
+									<a href="http://mirraonaq.com/FoodBasket.github.io/" target="_blank"class="image featured"><img src="logo.png" alt="Food Basket" /></a>
+									<h3><a href="http://mirraonaq.com/FoodBasket.github.io/" target="_blank">Food Basket</a></h3>
 									<p>Share and claim free food and items!</p>
 								</article>
 							</div>
