--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<article class="container" id="top">
 					<div class="row">
 						<div class="4u 12u(mobile)">
-							<span class="image fit"><img src="NewPic.jpg" alt="" /></span>
+							<span class="image fit"><img src="profilepic.jpg" alt="" /></span>
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
@@ -48,14 +48,14 @@
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="http://mirraonaq.com/FoodBasket.github.io/" target="_blank"class="image featured"><img src="logo.png" alt="Food Basket" /></a>
+									<a href="http://mirraonaq.com/FoodBasket.github.io/" target="_blank"class="image featured"><img src="FoodBasket.png" alt="Food Basket" /></a>
 									<h3><a href="http://mirraonaq.com/FoodBasket.github.io/" target="_blank">Food Basket</a></h3>
 									<p>Share and claim free food and items!</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style">
-									<a href="http://www.hackathon.io/83207" target="_blank"class="image featured"><img src="logo2.png" alt="Linx" /></a>
+									<a href="http://www.hackathon.io/83207" target="_blank"class="image featured"><img src="Linx.png" alt="Linx" /></a>
 									<h3><a href="http://www.hackathon.io/83207"target="_blank">Linx</a></h3>
 									<p>Language learning tool</p>
 								</article>
@@ -80,22 +80,20 @@
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="https://devpost.com/software/accurately-insured-business#" target="_blank" class="image featured"><img src="logo3.PNG" alt="AIB" /></a>
+									<a href="https://devpost.com/software/accurately-insured-business#" target="_blank" class="image featured"><img src="AIB.PNG" alt="AIB" /></a>
 									<h3><a href="https://devpost.com/software/accurately-insured-business#"t arget="_blank">Accurately Insured Business</a></h3>
-									<p>Business owners to get better coverage from real time analytics using artificial intelligence. </p>
+									<p>For business owners to get better coverage with real time analytics using artificial intelligence. </p>
 								</article>
 							</div>
-							<!--
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-									<h3><a href="#">Sed amet ornare</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<a href="https://github.com/MirRaonaq/MoodPlayer" class="image featured"><img src="MoodPlayer.png" alt="" /></a>
+									<h3><a href="https://github.com/MirRaonaq/MoodPlayer">Mood Player</a></h3>
+									<p>Play random music from your library based on your mood.</p>
 								</article>
 							</div>
 						</div>
 					</div>
-					-->
 					<footer>
 						<p>More projects coming soon . . .</p>
 					</footer>
