--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="4u 12u(mobile)">
-								<article class="box style2">
+								<article class="box style">
 									<a href="http://mirraonaq.com/FoodBasket.github.io/" target="_blank"class="image featured"><img src="FoodBasket.png" alt="Food Basket" /></a>
 									<h3><a href="http://mirraonaq.com/FoodBasket.github.io/" target="_blank">Food Basket</a></h3>
 									<p>Share and claim free food and items!</p>
@@ -72,23 +72,27 @@
 
 						<div class="row">
 							<div class="4u 12u(mobile)">
-								<article class="box style2">
+								<article class="box style">
 									<a href="https://devpost.com/software/shane-ai#_=_" target="_blank" class="image featured"><img src="shane.png" alt="Shane.ai" /></a>
 									<h3><a href="https://devpost.com/software/shane-ai#_=_" target="_blank">Shane.ai</a></h3>
 									<p>Bot that builds résumés</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
-								<article class="box style2">
+								<article class="box style">
+									<br>
 									<a href="https://devpost.com/software/accurately-insured-business#" target="_blank" class="image featured"><img src="AIB.PNG" alt="AIB" /></a>
-									<h3><a href="https://devpost.com/software/accurately-insured-business#"t arget="_blank">Accurately Insured Business</a></h3>
+									<br>
+									<h3><a href="https://devpost.com/software/accurately-insured-business#"target="_blank">Accurately Insured Business</a></h3>
 									<p>For business owners to get better coverage with real time analytics using artificial intelligence. </p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="https://github.com/MirRaonaq/MoodPlayer" class="image featured"><img src="MoodPlayer.png" alt="" /></a>
-									<h3><a href="https://github.com/MirRaonaq/MoodPlayer">Mood Player</a></h3>
+								<article class="box style">
+									<br>
+									<a href="https://github.com/MirRaonaq/MoodPlayer" target="_blank" class="image featured"><img src="MoodPlayer.png" alt="MoodPlayer" /></a>
+									<br>
+									<h3><a href="https://github.com/MirRaonaq/MoodPlayer" target="_blank" >Mood Player</a></h3>
 									<p>Play random music from your library based on your mood.</p>
 								</article>
 							</div>
