--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-126539298-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-126539298-1');
+</script>
 		<link rel="icon" href="MIR.png">
 		<title>Mir Raonaq</title>
 		<meta charset="utf-8" />
