Broken Link Update

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style">
-									<a href="http://www.hackathon.io/83207" target="_blank"class="image featured"><img src="Linx.png" alt="Linx" /></a>
-									<h3><a href="http://www.hackathon.io/83207"target="_blank">Linx</a></h3>
+									<a href="https://github.com/LinxSolutions" target="_blank"class="image featured"><img src="Linx.png" alt="Linx" /></a>
+									<h3><a href="https://github.com/LinxSolutions"target="_blank">Linx</a></h3>
 									<p>Language learning tool</p>
 								</article>
 							</div>
