--- a/index.html
+++ b/index.html
@@ -105,10 +105,17 @@
 								</article>
 							</div>
 						</div>
+						<hr>
+						<h2>Research</h2>
+						<div class="row">
+							<div class="4u 12u(mobile)">
+								<article class="box style">
+									<a href="https://www.mirraonaq.com/SBD.github.io/" target="_blank" class="image featured"></a>
+									<h3><a href="https://www.mirraonaq.com/SBD.github.io/" target="_blank">Sentence Boundary Detection (SBD)</a></h3>
+									<p>SBD without punctuation marks</p>
+								</article>
+							</div>
 					</div>
-					<footer>
-						<p>More projects coming soon . . .</p>
-					</footer>
 				</article>
 			</div>
 
