--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<header>
 								<h1>Hi,<br><br> I'm <strong>Mir Raonaq</strong>.</h1>
 							</header>
-							<p>Premier Field Engineer at <a href="https://www.microsoft.com/en-us/" target="_blank">Microsoft</a></p>
+							<p>Engineer at <a href="https://www.microsoft.com/en-us/" target="_blank">Microsoft</a></p>
 							<a href="Mir_Raonaq_Resume.pdf" target="_blank" class="button big scrolly">Résumé</a>
 						</div>
 					</div>
