--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<meta property="og:image" content="profilepic.jpg" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126539298-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
