--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<meta property="og:image" content="profilepic.jpg" />
+		<meta property="og:image" content="profilepic.jpg"/>
+		<meta property="og:image:type" content="profilepic.jpg">
+		<meta property="og:image:width" content="1024">
+		<meta property="og:image:height" content="1024">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126539298-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
