--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta property="og:image" content="profilepic.jpg"/>
-		<meta property="og:image:type" content="profilepic.jpg">
+		<meta property="og:image:type" content="profilepic.jpg/">
 		<meta property="og:description" content="Mir Raonaq's personal website!"/>
-		<meta property="og:image:width" content="1024">
-		<meta property="og:image:height" content="1024">
+		<meta property="og:image:width" content="1024"/>
+		<meta property="og:image:height" content="1024"/>
 		<link rel="icon" href="MIR.png">
 		<title>Mir Raonaq</title>
 		<meta charset="utf-8" />
