--- a/index.html
+++ b/index.html
@@ -113,6 +113,20 @@
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style">
+									<a href="https://github.com/MirRaonaq/Address-Book" target="_blank" class="image featured"></a>
+									<h3><a href="https://github.com/MirRaonaq/Address-Book" target="_blank" >Address Book</a></h3>
+									<p>Store contact  information (desktop Electron app)</p>
+								</article>
+							</div>
+							<div class="4u 12u(mobile)">
+								<article class="box style">
+									<a href="http://stark.cse.buffalo.edu/cse410/seventrain/uploads/index.html" target="_blank" class="image featured"></a>
+									<h3><a href="http://stark.cse.buffalo.edu/cse410/seventrain/uploads/index.html" target="_blank" >Learn to Code</a></h3>
+									<p>Website for students to learn coding</p>
+								</article>
+							</div>
+							<div class="4u 12u(mobile)">
+								<article class="box style">
 									<a href="https://www.mirraonaq.com/SBD.github.io/" target="_blank" class="image featured"></a>
 									<h3><a href="https://www.mirraonaq.com/SBD.github.io/" target="_blank">Sentence Boundary Detection (SBD)</a></h3>
 									<p>SBD without punctuation marks</p>
