--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<meta property="og:image" content="profilepic.jpg"/>
-		<meta property="og:image:type" content="profilepic.jpg/">
-		<meta property="og:description" content="Mir Raonaq's personal website!"/>
-		<meta property="og:image:width" content="1024"/>
-		<meta property="og:image:height" content="1024"/>
+		<meta name="og:site_name" content="Mir Raonaq"/>
+		<meta name="og:title" content="Mir's personal website"/>
+		<meta name="og:image" content="profilepic.jpg">
+		<meta name="og:url" content="https://www.mirraonaq.com/">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta charset="utf-8" />
 		<link rel="icon" href="MIR.png">
 		<title>Mir Raonaq</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-126539298-1"></script>
