--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 							<header>
 								<h1>Hi,<br><br> I'm <strong>Mir Raonaq</strong>.</h1>
 							</header>
-							<a href="Mir_Raonaq_Resume.pdf" target="_blank" class="button big scrolly">Résumé</a>
-						</div>
+							<p class="fancy" style="margin-top:-15px; margin-bottom:-15px;"><span><a class="button is-dark is-medium" 
+								onclick="alert('Not currently searching for new opportunities but feel free to connect with me on LinkedIn: https://www.linkedin.com/in/mirraonaq/')">My Résumé</a></span></p>						</div>
 					</div>
 				</article>
 			</div>
